--- a/pages/attractive.html
+++ b/pages/attractive.html
@@ -13,7 +13,7 @@
             <a href="cute.html"><button>I like you, because..</button></a>
             <a href="beauty.html"><button>Bible References</button></a>
             <a href="attractive.html"><button>Short Poem for you</button></a>
-            <a href="C:\Users\Vince\Documents\confession\dashboard.html"><button>Go Back</button></a>
+            <a href="C:\Users\Vince\Documents\confession\index.html"><button>Go Back</button></a>
         </ul>
     </div>
 <h1 id="text">A Short Poem for the Girl I admire the most</h1>
